--- a/CSS/class.css
+++ b/CSS/class.css
@@ -13,3 +13,16 @@
   background-color: rgb(54, 66, 68);
   position: sticky;
 }
+
+.htline{
+  width: 100%;
+  height: 13px;
+  background-color: rgb(24, 27, 27);
+  border: 1px solid rgb(54, 66, 68);
+  flex-direction: row;
+}
+
+.space-in-word-of-tweet{
+  margin: 3px;
+}
+
