--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   background-color: black;
@@ -34,10 +36,8 @@ body {
 }
 
 .left nav ul li {
-  margin-bottom: 23px;
-  margin-right: 10px;
-  width: 10vw;
-  height: 5vh;
+  width: 150px;
+  height: 40px;
   /* background-color: red; */
   /* text-align: center; */
   border-radius: 20px;
@@ -72,7 +72,7 @@ body {
 
 .tweet {
   background-color: rgb(0, 132, 255);
-  width: 70px;
+  width: 162px;
   height: 47px;
   justify-content: center;
   align-content: center;
@@ -86,8 +86,8 @@ body {
 .name {
   display: flex;
   padding: 36px 0px 0px 39px;
-  height: 4vh;
-  width: 13vw;
+  height: 76px;
+  width: 239px;
   font-size: 16px;
   border-radius: 40px;
   justify-content: center;
@@ -121,11 +121,16 @@ body {
 .centre {
   display: flex;
   flex-direction: column;
+  max-width: 700px;
 }
 
 .centreall {
   /* min-width: calc(); */
   min-width: 39vw;
+  position: sticky;
+  top: 0%;
+  z-index: 1000;
+  background-color: black;
 }
 
 .home {
@@ -153,7 +158,7 @@ body {
   /* align-items: flex-start; */
 }
 
-.wtweet{
+.wtweet {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,11 +173,78 @@ body {
   font-size: 22px;
 }
 
-.otheruser{
+.otheruser {
   display: flex;
+  flex-direction: column;
   padding: 10px 0px 0px 15px;
 }
 
-.otherimg{
+.otherimg {
   border-radius: 40px;
+}
+
+.userdetails {
+  display: flex;
+  flex-direction: row;
+}
+
+
+.usercontent {
+  padding: 0px 0px 10px 50px;
+  flex-direction: column;
+  max-width: 550px;
+  font-family: inherit;
+}
+
+.userupimage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 10px 10px 10px;
+}
+
+.givenimage{
+  border-radius: 20px;
+  border: 1px solid rgb(228, 228, 228);
+}
+
+.usertweetoptions {
+  display: flex;
+  flex-direction: row;
+}
+
+.replybox {
+  display: flex;
+  padding: 0px 40px;
+}
+
+.reply,
+.heartred,.retgreen {
+  fill: black;
+}
+
+.replycount,.heartcount,.tweetcount {
+  font-size: 14px;
+  color: rgb(228, 228, 228);
+  padding: 0px 0px 0px 10px;
+}
+
+.reply:hover {
+  stroke: rgb(0, 132, 255);
+}
+
+.replycount:hover {
+  color: rgb(0, 132, 255);
+}
+.heartred:hover{
+  stroke: red;
+}
+.heartcount:hover {
+color: red;
+}
+.retgreen:hover{
+  stroke: rgb(23, 184, 23);
+}
+.tweetcount:hover {
+color: rgb(23, 184, 23);
 }
