--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,9 +58,7 @@ body {
 }
 .pageso {
   display: flex;
-  position:relative;
-  /* left: 10px; */
-  padding: 0px 0px 0px 0px;
+  align-items: center;
 }
 .lisvg{
   padding: 0px 15px 0px 0px;
