--- a/CSS/class.css
+++ b/CSS/class.css
@@ -11,6 +11,7 @@
   width: 1px;
   height: 100vh;
   background-color: rgb(54, 66, 68);
+  /* background-color: rgb(18, 163, 189); */
   position: sticky;
   top: 0;
   z-index: 2200;
