--- a/CSS/media_query.css
+++ b/CSS/media_query.css
@@ -4,19 +4,45 @@
     }
     .container{
         background-color: yellow;
-    }
-} */
+      }
+    } */
+@media screen and (max-width: 1430px) {
+  .left {
+    padding: 0px 10px 0px 80px;
+  }
+  .tofollowone .followbuttonbox {
+    padding: 0px 0px 0px 50px;
+  }
+
+  .tofollowtwo .followbuttonbox {
+    padding: 0px 0px 0px 2px;
+  }
+  .tofollowthree .followbuttonbox {
+    padding: 0px 0px 0px 18px;
+  }
+}
 @media screen and (max-width: 1400px) {
   .left {
     padding: 0px 10px 0px 80px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1320.8px) {
+  .searchtwitter {
+    padding: 8px 0px 0px 20px;
+  }
+  .whotofollow {
+    padding: 20px 0px 0px 20px;
+  }
+  .copyright {
+    padding: 30px 0px 0px 33px;
+  }
+}
+@media screen and (max-width: 1292px) {
   .left {
     padding: 0px 0px 0px 0px;
   }
 }
-@media screen and (max-width: 1147px) {
+@media screen and (max-width: 1202.4px) {
   .pages {
     display: none;
   }
@@ -35,5 +61,42 @@
   }
   .mediatweetsvg:hover {
     background-color: rgb(27, 122, 211);
+  }
+}
+@media screen and (max-width: 1085.6px) {
+  /* .tofollowtwo .nametofollow{
+    display: none;
+  }
+  .mqnametofollow{
+    padding: 0px 0px 5px 10px;
+    display: contents;
+  } */
+  .tofollow {
+    display: flex;
+    flex-direction: column;
+  }
+  .tofollowone .followbuttonbox {
+    padding: 0px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .tofollowtwo .followbuttonbox {
+    padding: 0px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+  }
+  .tofollowthree .followbuttonbox {
+    padding: 0px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 942.6px){
+  .left{
+    padding-left: 20px;
+  }
+  .right{
+    display: none;
   }
 }
